--- a/src/main/resources/com/ricochetrobots/systems/game-view.fxml
+++ b/src/main/resources/com/ricochetrobots/systems/game-view.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ricochetrobots.systems.GameController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ricochetrobots.systems.GameController">
 
     <children>
         <GridPane fx:id="gridPane" layoutX="349.0" layoutY="50.0" maxHeight="600.0" maxWidth="600.0" minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0">
@@ -70,6 +73,33 @@
             <Font name="Arial Rounded MT Bold" size="13.0" />
          </font>
       </Label>
+      <Label layoutX="70.0" layoutY="280.0" text="Nombre de coups possibles">
+         <font>
+            <Font name="Candara Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="86.0" layoutY="342.0" />
+      <HBox fx:id="hBoxPlayer1" alignment="CENTER" layoutX="32.0" layoutY="318.0" prefHeight="34.0" prefWidth="242.0">
+         <children>
+            <Label text="Joueur 1    " textFill="#003cff">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="textFieldPlayer1" onKeyTyped="#onSetNumber" text="0" />
+         </children>
+      </HBox>
+      <HBox fx:id="hBoxPlayer2" alignment="CENTER" layoutX="31.0" layoutY="354.0" prefHeight="34.0" prefWidth="242.0">
+         <children>
+            <Label text="Joueur 2    " textFill="#003cff">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="textFieldPlayer2" onKeyTyped="#onSetNumber" text="0" />
+         </children>
+      </HBox>
+      <Button fx:id="validateShotsButton" defaultButton="true" layoutX="41.0" layoutY="412.0" mnemonicParsing="false" onAction="#validateShotsOnClick" prefHeight="13.0" prefWidth="108.0" text="Valider" />
     </children>
 
 </AnchorPane>
