--- a/src/main/resources/com/ricochetrobots/systems/game-view.fxml
+++ b/src/main/resources/com/ricochetrobots/systems/game-view.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ricochetrobots.systems.GameController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ricochetrobots.systems.GameController">
 
     <children>
         <GridPane fx:id="gridPane" layoutX="349.0" layoutY="50.0" maxHeight="600.0" maxWidth="600.0" minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0">
@@ -58,16 +56,6 @@
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="107.0" layoutY="105.0" text="Jeton cible">
-         <font>
-            <Font name="Arial Rounded MT Bold" size="17.0" />
-         </font>
-      </Label>
-      <ImageView fx:id="targetImage" fitHeight="106.0" fitWidth="129.0" layoutX="100.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../../assets/tokens/R_P_token.PNG" />
-         </image>
-      </ImageView>
       <Label fx:id="targetSentenceText" layoutX="506.0" layoutY="23.0" text="Déplacez le robot bleu jusqu'à sa cible étoile !">
          <font>
             <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -100,6 +88,34 @@
          </children>
       </HBox>
       <Button fx:id="validateShotsButton" defaultButton="true" layoutX="41.0" layoutY="412.0" mnemonicParsing="false" onAction="#validateShotsOnClick" prefHeight="13.0" prefWidth="108.0" text="Valider" />
+      <HBox alignment="CENTER" layoutX="53.0" layoutY="154.0" prefHeight="25.0" prefWidth="149.0">
+         <children>
+            <Label fx:id="namePlayer2" text="Score Joueur 2 : " textFill="#002fff">
+               <font>
+                  <Font name="Candara Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="textScorePlayer2" text=" 0" textFill="RED">
+               <font>
+                  <Font name="Candara Bold" size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" layoutX="53.0" layoutY="117.0" prefHeight="25.0" prefWidth="149.0">
+         <children>
+            <Label fx:id="namePlayer1" text="Score Joueur 1 : " textFill="#002fff">
+               <font>
+                  <Font name="Candara Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="textScorePlayer1" text=" 0" textFill="RED">
+               <font>
+                  <Font name="Candara Bold" size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
     </children>
 
 </AnchorPane>
